@@ -22,7 +22,8 @@ bin.includes = plugin.xml,\
                ivyde-eclipse.jar,\
                icons/,\
                META-INF/,\
-               doc/
+               doc/,\
+               xsd/
                
 module.type = tools
 
@@ -41,4 +42,5 @@ src.includes = plugin.xml,\
                .settings/,\
                IvyDE.launch,\
                META-INF/,\
-               CHANGES.txt
+               CHANGES.txt,\
+               xsd/
