@@ -1,0 +1,280 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one
+   or more contributor license agreements.  See the NOTICE file
+   distributed with this work for additional information
+   regarding copyright ownership.  The ASF licenses this file
+   to you under the Apache License, Version 2.0 (the
+   "License"); you may not use this file except in compliance
+   with the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing,
+   software distributed under the License is distributed on an
+   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+   KIND, either express or implied.  See the License for the
+   specific language governing permissions and limitations
+   under the License.    
+-->
+<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" elementFormDefault="qualified">
+
+	<xs:complexType name="configurations-conf">
+        <xs:attribute name="name" type="xs:string" use="required"/>
+        <xs:attribute name="transitive" type="xs:boolean"/>
+        <xs:attribute name="extends" type="xs:string"/>
+        <xs:attribute name="description" type="xs:string"/>
+        <xs:attribute name="deprecated" type="xs:string"/>
+        <xs:attribute name="visibility" default="public">
+			<xs:simpleType>
+				<xs:restriction base="xs:string">
+					<xs:enumeration value="private"/>
+					<xs:enumeration value="public"/>
+				</xs:restriction>
+			</xs:simpleType>
+		</xs:attribute>
+        <xs:anyAttribute namespace="##other" processContents="lax" />
+	</xs:complexType>
+
+	<xs:complexType name="global-exclude">
+        <xs:sequence>
+      		<xs:element name="conf" minOccurs="0" maxOccurs="unbounded">
+            	<xs:complexType>
+		            <xs:attribute name="name" type="xs:string" use="required"/>
+            	</xs:complexType>
+      		</xs:element>
+        </xs:sequence>
+        <xs:attribute name="org" type="xs:string"/>
+        <xs:attribute name="module" type="xs:string"/>
+        <xs:attribute name="artifact" type="xs:string"/>
+        <xs:attribute name="type" type="xs:string"/>
+        <xs:attribute name="ext" type="xs:string"/>
+        <xs:attribute name="conf" type="xs:string"/>
+        <xs:attribute name="matcher" type="xs:string"/>
+        <xs:anyAttribute namespace="##other" processContents="lax" />
+	</xs:complexType>
+
+  <xs:element name="ivy-module">
+      <xs:complexType>
+        <xs:sequence>
+  		    <xs:element name="info">
+            	<xs:complexType>
+			        <xs:sequence>
+			      		<xs:element name="license" minOccurs="0" maxOccurs="unbounded">
+			            	<xs:complexType>
+					            <xs:attribute name="name" type="xs:string" use="required"/>
+					            <xs:attribute name="url" type="xs:string"/>
+			            	</xs:complexType>
+			      		</xs:element>
+			      		<xs:element name="ivyauthor" minOccurs="0" maxOccurs="unbounded">
+			            	<xs:complexType>
+					            <xs:attribute name="name" type="xs:string" use="required"/>
+					            <xs:attribute name="url" type="xs:string"/>
+			            	</xs:complexType>
+			      		</xs:element>
+			      		<xs:element name="repository" minOccurs="0" maxOccurs="unbounded">
+			            	<xs:complexType>
+					            <xs:attribute name="name" type="xs:string" use="required"/>
+					            <xs:attribute name="url" type="xs:string"/>
+					            <xs:attribute name="pattern" type="xs:string"/>
+					            <xs:attribute name="ivys" type="xs:boolean"/>
+					            <xs:attribute name="artifacts" type="xs:boolean"/>
+			            	</xs:complexType>
+			      		</xs:element>
+			      		<xs:element name="description" minOccurs="0" maxOccurs="1">
+			            	<xs:complexType mixed="true">
+			            			<xs:sequence>
+			            				<xs:any minOccurs="0" maxOccurs="unbounded" processContents="lax"/>
+					            	</xs:sequence>
+					            <xs:attribute name="homepage" type="xs:string"/>
+			            	</xs:complexType>
+			      		</xs:element>
+			      		<xs:any minOccurs="0" maxOccurs="unbounded" namespace="##other" processContents="lax"/>
+			        </xs:sequence>
+		            <xs:attribute name="organisation" type="xs:string" use="required"/>
+		            <xs:attribute name="module" type="xs:string" use="required"/>
+		            <xs:attribute name="branch" type="xs:string"/>
+		            <xs:attribute name="revision" type="xs:string"/>
+		            <xs:attribute name="status" type="xs:string"/>
+		            <xs:attribute name="publication" type="xs:string"/>
+		            <xs:attribute name="resolver" type="xs:string"/>
+		            <xs:attribute name="namespace" type="xs:string"/>
+		            <xs:attribute name="default" type="xs:boolean"/>
+		            <xs:anyAttribute namespace="##other" processContents="lax" />
+	            </xs:complexType>
+      		</xs:element>
+      		<xs:element name="configurations" minOccurs="0">
+			      <xs:complexType>
+				        <xs:sequence>
+				        	<xs:choice minOccurs="0" maxOccurs="unbounded">
+					      		<xs:element name="conf" type="configurations-conf"/>
+					      		<xs:element name="include">
+					            	<xs:complexType>
+							            <xs:attribute name="file" type="xs:string"/>
+							            <xs:attribute name="url"  type="xs:string"/>
+					            	</xs:complexType>
+					      		</xs:element>
+					      	</xs:choice>
+				        </xs:sequence>
+						<xs:attribute name="defaultconfmapping" type="xs:string"/>				  
+						<xs:attribute name="confmappingoverride" type="xs:boolean" />      
+			      </xs:complexType>
+      		</xs:element>
+      		<xs:element name="publications" minOccurs="0">
+			      <xs:complexType>
+				        <xs:sequence>
+				      		<xs:element name="artifact" minOccurs="0" maxOccurs="unbounded">
+				            	<xs:complexType>
+							        <xs:sequence>
+							      		<xs:element name="conf" minOccurs="0" maxOccurs="unbounded">
+							            	<xs:complexType>
+									            <xs:attribute name="name" type="xs:string" use="required"/>
+							            	</xs:complexType>
+							      		</xs:element>
+							        </xs:sequence>
+						            <xs:attribute name="name" type="xs:string"/>
+						            <xs:attribute name="type" type="xs:string"/>
+						            <xs:attribute name="ext" type="xs:string"/>
+						            <xs:attribute name="conf" type="xs:string"/>
+						            <xs:attribute name="url" type="xs:string"/>
+						            <xs:anyAttribute namespace="##other" processContents="lax" />
+				            	</xs:complexType>
+				      		</xs:element>
+				        </xs:sequence>
+						<xs:attribute name="defaultconf" type="xs:string"/>				  
+			      </xs:complexType>
+      		</xs:element>
+      		<xs:element name="dependencies" minOccurs="0">
+			      <xs:complexType>
+				        <xs:sequence>
+				      		<xs:element name="dependency" minOccurs="0" maxOccurs="unbounded">
+				            	<xs:complexType>
+							        <xs:sequence>
+							      		<xs:element name="conf" minOccurs="0" maxOccurs="unbounded">
+							            	<xs:complexType>
+										        <xs:sequence>
+										      		<xs:element name="mapped" minOccurs="0" maxOccurs="unbounded">
+										            	<xs:complexType>
+												            <xs:attribute name="name" type="xs:string" use="required"/>
+										            	</xs:complexType>
+										      		</xs:element>
+										        </xs:sequence>
+									            <xs:attribute name="name" type="xs:string" use="required"/>
+									            <xs:attribute name="mapped" type="xs:string"/>
+							            	</xs:complexType>
+							      		</xs:element>
+							      		<xs:element name="artifact" minOccurs="0" maxOccurs="unbounded">
+							            	<xs:complexType>
+										        <xs:sequence>
+										      		<xs:element name="conf" minOccurs="0" maxOccurs="unbounded">
+										            	<xs:complexType>
+												            <xs:attribute name="name" type="xs:string" use="required"/>
+										            	</xs:complexType>
+										      		</xs:element>
+										        </xs:sequence>
+									            <xs:attribute name="name" type="xs:string" use="required"/>
+									            <xs:attribute name="type" type="xs:string"/>
+									            <xs:attribute name="ext" type="xs:string"/>
+									            <xs:attribute name="conf" type="xs:string"/>
+									            <xs:attribute name="url" type="xs:string"/>
+									            <xs:anyAttribute namespace="##other" processContents="lax" />
+							            	</xs:complexType>
+							      		</xs:element>
+							      		<xs:element name="include" minOccurs="0" maxOccurs="unbounded">
+							            	<xs:complexType>
+										        <xs:sequence>
+										      		<xs:element name="conf" minOccurs="0" maxOccurs="unbounded">
+										            	<xs:complexType>
+												            <xs:attribute name="name" type="xs:string" use="required"/>
+										            	</xs:complexType>
+										      		</xs:element>
+										        </xs:sequence>
+									            <xs:attribute name="name" type="xs:string"/>
+									            <xs:attribute name="type" type="xs:string"/>
+									            <xs:attribute name="ext" type="xs:string"/>
+									            <xs:attribute name="conf" type="xs:string"/>
+									            <xs:attribute name="matcher" type="xs:string"/>
+									            <xs:anyAttribute namespace="##other" processContents="lax" />
+							            	</xs:complexType>
+							      		</xs:element>
+							      		<xs:element name="exclude" minOccurs="0" maxOccurs="unbounded">
+							            	<xs:complexType>
+										        <xs:sequence>
+										      		<xs:element name="conf" minOccurs="0" maxOccurs="unbounded">
+										            	<xs:complexType>
+												            <xs:attribute name="name" type="xs:string" use="required"/>
+										            	</xs:complexType>
+										      		</xs:element>
+										        </xs:sequence>
+									            <xs:attribute name="org" type="xs:string"/>
+									            <xs:attribute name="module" type="xs:string"/>
+									            <xs:attribute name="name" type="xs:string"/>
+									            <xs:attribute name="type" type="xs:string"/>
+									            <xs:attribute name="ext" type="xs:string"/>
+									            <xs:attribute name="conf" type="xs:string"/>
+									            <xs:attribute name="matcher" type="xs:string"/>
+									            <xs:anyAttribute namespace="##other" processContents="lax" />
+							            	</xs:complexType>
+							      		</xs:element>
+							        </xs:sequence>
+						            <xs:attribute name="org" type="xs:string"/>
+						            <xs:attribute name="name" type="xs:string" use="required"/>
+						            <xs:attribute name="branch" type="xs:string"/>
+						            <xs:attribute name="branchConstraint" type="xs:string"/>
+						            <xs:attribute name="rev" type="xs:string" use="required"/>
+						            <xs:attribute name="revConstraint" type="xs:string"/>
+						            <xs:attribute name="force" type="xs:boolean"/>
+						            <xs:attribute name="changing" type="xs:boolean" default="false"/>
+						            <xs:attribute name="transitive" type="xs:boolean" default="true"/>
+						            <xs:attribute name="conf" type="xs:string"/>
+						            <xs:anyAttribute namespace="##other" processContents="lax" />
+				            	</xs:complexType>
+				      		</xs:element>
+				      		<xs:element name="exclude" type="global-exclude" minOccurs="0" maxOccurs="unbounded" />
+				      		<xs:element name="override" minOccurs="0" maxOccurs="unbounded">
+				            	<xs:complexType>
+						            <xs:attribute name="org" type="xs:string"/>
+						            <xs:attribute name="module" type="xs:string"/>
+						            <xs:attribute name="matcher" type="xs:string"/>
+						            <xs:attribute name="rev" type="xs:string"/>
+						            <xs:attribute name="branch" type="xs:string"/>
+				            	</xs:complexType>
+				      		</xs:element>
+				      		<xs:element name="conflict" minOccurs="0" maxOccurs="unbounded">
+				            	<xs:complexType>
+						            <xs:attribute name="org" type="xs:string"/>
+						            <xs:attribute name="module" type="xs:string"/>
+						            <xs:attribute name="manager" type="xs:string"/>
+						            <xs:attribute name="rev" type="xs:string"/>
+						            <xs:attribute name="matcher" type="xs:string"/>
+						            <xs:anyAttribute namespace="##other" processContents="lax" />
+				            	</xs:complexType>
+				      		</xs:element>
+				        </xs:sequence>
+						<xs:attribute name="defaultconf" type="xs:string"/>				        
+						<xs:attribute name="defaultconfmapping" type="xs:string"/>				        
+                        <xs:attribute name="confmappingoverride" type="xs:boolean" />
+			      </xs:complexType>
+      		</xs:element>
+      		<xs:element name="conflicts" minOccurs="0">
+			      <xs:complexType>
+				        <xs:sequence>
+				      		<xs:element name="manager" maxOccurs="unbounded">
+				            	<xs:complexType>
+						            <xs:attribute name="org" type="xs:string"/>
+						            <xs:attribute name="module" type="xs:string"/>
+						            <xs:attribute name="name" type="xs:string"/>
+						            <xs:attribute name="rev" type="xs:string"/>
+						            <xs:attribute name="matcher" type="xs:string"/>
+						            <xs:anyAttribute namespace="##other" processContents="lax" />
+				            	</xs:complexType>
+				      		</xs:element>
+				        </xs:sequence>
+			      </xs:complexType>
+      		</xs:element>
+        </xs:sequence>
+        <xs:attribute name="version" type="xs:string" use="required"/>
+      </xs:complexType>
+  </xs:element>
+
+</xs:schema>
